add reset password logic and improve error handling